Add file and loop for getting dependencies

--- a/Dependency File Search/Python_Script_For_Dependency_File_Search.ipynb
+++ b/Dependency File Search/Python_Script_For_Dependency_File_Search.ipynb
@@ -1,24 +1,8 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "pip install osfclient"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -26,30 +10,22 @@
         "id": "4a82_Pz9Z8bo",
         "outputId": "c7faa662-df69-4f01-8410-7efcdbeb35d2"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting osfclient\n",
-            "  Downloading osfclient-0.0.5-py2.py3-none-any.whl.metadata (5.5 kB)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.10/dist-packages (from osfclient) (2.32.3)\n",
-            "Requirement already satisfied: tqdm in /usr/local/lib/python3.10/dist-packages (from osfclient) (4.66.6)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.10/dist-packages (from osfclient) (1.16.0)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests->osfclient) (3.4.0)\n",
-            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests->osfclient) (3.10)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests->osfclient) (2.2.3)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests->osfclient) (2024.8.30)\n",
-            "Downloading osfclient-0.0.5-py2.py3-none-any.whl (39 kB)\n",
-            "Installing collected packages: osfclient\n",
-            "Successfully installed osfclient-0.0.5\n"
-          ]
-        }
+      "outputs": [],
+      "source": [
+        "pip install osfclient"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uDHs7DIL1NVZ",
+        "outputId": "0b21c80d-4f59-4200-952d-795a39cadd20"
+      },
+      "outputs": [],
       "source": [
         "# 1) Python script to search for the file or a folder through OSF Project\n",
         "\n",
@@ -90,27 +66,20 @@
         "# Start the search\n",
         "if not find_item(storage, target_name):\n",
         "    print(f\"The item '{target_name}' was not found in the project.\")\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "uDHs7DIL1NVZ",
-        "outputId": "0b21c80d-4f59-4200-952d-795a39cadd20"
-      },
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Found file: data.prep.R at path: /Code and simulations results first draft - July 2020/Simulation Study II - Predictive Accuracy/data.prep.R\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        },
+        "id": "0A53RoZSfWtg",
+        "outputId": "ad66bb09-38ff-4d47-fd39-747cc3952ed1"
+      },
+      "outputs": [],
       "source": [
         "# 2) Python script to search for the file or a folder through OSF Project and download it locally\n",
         "\n",
@@ -192,121 +161,19 @@
         "# Start the search and download process\n",
         "if not find_and_download_item(storage, target_name, download_directory):\n",
         "    print(f\"The item '{target_name}' was not found in the project.\")\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 106
-        },
-        "id": "0A53RoZSfWtg",
-        "outputId": "ad66bb09-38ff-4d47-fd39-747cc3952ed1"
-      },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Found file 'data.prep.R' in OSF path: '/data.prep.R'\n",
-            "Downloading file to /content/data.prep.R...\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 1.15k/1.15k [00:00<00:00, 731kbytes/s]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Downloaded 'data.prep.R' successfully to /content/data.prep.R.\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\n"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "\n",
-              "    async function download(id, filename, size) {\n",
-              "      if (!google.colab.kernel.accessAllowed) {\n",
-              "        return;\n",
-              "      }\n",
-              "      const div = document.createElement('div');\n",
-              "      const label = document.createElement('label');\n",
-              "      label.textContent = `Downloading \"${filename}\": `;\n",
-              "      div.appendChild(label);\n",
-              "      const progress = document.createElement('progress');\n",
-              "      progress.max = size;\n",
-              "      div.appendChild(progress);\n",
-              "      document.body.appendChild(div);\n",
-              "\n",
-              "      const buffers = [];\n",
-              "      let downloaded = 0;\n",
-              "\n",
-              "      const channel = await google.colab.kernel.comms.open(id);\n",
-              "      // Send a message to notify the kernel that we're ready.\n",
-              "      channel.send({})\n",
-              "\n",
-              "      for await (const message of channel.messages) {\n",
-              "        // Send a message to notify the kernel that we're ready.\n",
-              "        channel.send({})\n",
-              "        if (message.buffers) {\n",
-              "          for (const buffer of message.buffers) {\n",
-              "            buffers.push(buffer);\n",
-              "            downloaded += buffer.byteLength;\n",
-              "            progress.value = downloaded;\n",
-              "          }\n",
-              "        }\n",
-              "      }\n",
-              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
-              "      const a = document.createElement('a');\n",
-              "      a.href = window.URL.createObjectURL(blob);\n",
-              "      a.download = filename;\n",
-              "      div.appendChild(a);\n",
-              "      a.click();\n",
-              "      div.remove();\n",
-              "    }\n",
-              "  "
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "download(\"download_25b10eff-b923-4905-ab64-fecfedc83161\", \"data.prep.R\", 1146)"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Triggered download of 'data.prep.R' to your local machine.\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MV_cIwH0-R4U",
+        "outputId": "84975605-b95b-4e52-a372-cfc78e993c82"
+      },
+      "outputs": [],
       "source": [
         "# 3) To search for the dependency file of the OSF project\n",
         "from osfclient.api import OSF\n",
@@ -359,28 +226,84 @@
         "    for file_path in unique_files.values():\n",
         "        print(file_path)\n",
         "\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "MV_cIwH0-R4U",
-        "outputId": "84975605-b95b-4e52-a372-cfc78e993c82"
-      },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Found dependency file: README.md in OSF path: /README.md\n",
-            "Found dependency file: README.md in OSF path: /MalawiEarlyHumanChronology/README.md\n",
-            "\n",
-            "List of unique dependency files with their OSF paths:\n",
-            "/MalawiEarlyHumanChronology/README.md\n"
-          ]
-        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "osf_metadata = pd.read_csv(\"OSF_Meta_Data_SC_v0.csv\")\n",
+        "osf_metadata"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "source_url_list = list(osf_metadata.Source.dropna().unique())\n",
+        "source_url_list"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "len(source_url_list)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from tqdm import tqdm\n",
+        "\n",
+        "osf = OSF()\n",
+        "\n",
+        "all_unique_files = {}\n",
+        "for url in tqdm(source_url_list):\n",
+        "    project_id = url.split('/')[-2]\n",
+        "    project = osf.project(project_id)\n",
+        "    storage = project.storage('osfstorage')\n",
+        "    unique_files = search_dependency_files(storage, dependency_files)\n",
+        "    \n",
+        "    all_unique_files[url] = unique_files\n",
+        "\n",
+        "all_unique_files"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": ".venv",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.5"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
